<resources>
    <string name="app_name">Travelmantics</string>
    <string name="web_client_id">1053873532329-uf0g2gg6edcdci80t2gjkadegi7hp4rg.apps.googleusercontent.com</string>
    <string name="sign_with_email">Sign with email</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="first_last_name"><![CDATA[First & last name]]></string>
    <string name="password_does_not_match">Password does not match!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="rate">Rate</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="description">Enter description</string>
    <string name="add">Add</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_all_fields">Please Enter required Fields</string>
    <string name="uploaded">Uploaded</string>
</resources>
