<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.AdminActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/name"
                android:inputType="text" />


            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/rate"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/tripImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:visibility="gone" />


            <Button
                android:id="@+id/selectImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:foreground="?android:attr/selectableItemBackground"
                android:hint="@string/select_image" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>